# cpp-course-CSC-sem1

./: README.md
controls/cpp-classroom-2324-sem01-control01-nikitastepnik/: .gitignore  CMakeLists.txt  Makefile  README.adoc
controls/cpp-classroom-2324-sem01-control01-nikitastepnik/src/: a.out  network.cpp  network.hpp  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp
controls/cpp-classroom-2324-sem01-control03-nikitastepnik/: .gitignore  CMakeLists.txt  README.adoc
controls/cpp-classroom-2324-sem01-control03-nikitastepnik/.github/classroom/: autograding.json
controls/cpp-classroom-2324-sem01-control03-nikitastepnik/src/: maybe.hpp  test_memory_check.cpp  test_smoke_task_1.cpp  test_smoke_task_2.cpp  test_smoke_task_3.cpp  test_utils.hpp
final_exam /2023-winter-exam-nikitastepnik/: .gitignore  CMakeLists.txt  README.adoc  set.hpp  smoke_test.cpp
final_exam /2023-winter-exam-nikitastepnik/.github/workflows/: tests.yaml
homeworks/2023-ha3-whatever-nikitastepnik/: .gitignore  CMakeLists.txt  README.md  run_tests.sh  smoke_test.cpp  whatever.hpp
homeworks/2023-ha3-whatever-nikitastepnik/.github/workflows/: tests.yaml
homeworks/2023-ha3-whatever-nikitastepnik/tests/main/: comp_include_twice.cpp  ncomp_whatever_cast_const.cpp  run_array.cpp  run_assign.cpp  run_assign_const.cpp  run_assign_copy_once.cpp  run_assign_whatever_copy_once.cpp  run_assign_whatever_empty.cpp  run_ctor_const.cpp  run_ctor_copy_once.cpp  run_ctor_from_empty.cpp  run_noexcept.cpp  run_only_include.cpp  run_pointer.cpp  run_pointer_change.cpp  run_reference_change.cpp  run_std_vector.cpp  run_whatever_cast_nullptr.cpp
homeworks/2023-ha3-whatever-nikitastepnik/tests/minimal/: run_clear.cpp  run_empty_const.cpp  run_minimal.cpp
homeworks/cpp-classroom-2324-sem01-cls03-nikitastepnik/: .gitignore  CMakeLists.txt  Makefile  README.adoc  node_utils
homeworks/cpp-classroom-2324-sem01-cls03-nikitastepnik/int_vector.dSYM/Contents/: Info.plist
homeworks/cpp-classroom-2324-sem01-cls03-nikitastepnik/node_utils.dSYM/Contents/: Info.plist
homeworks/cpp-classroom-2324-sem01-cls03-nikitastepnik/node_utils.dSYM/Contents/Resources/DWARF/: node_utils
homeworks/cpp-classroom-2324-sem01-cls03-nikitastepnik/src/task_1/: concat.hpp
homeworks/cpp-classroom-2324-sem01-cls03-nikitastepnik/src/task_2/: a.out  int_vector.hpp
homeworks/cpp-classroom-2324-sem01-cls03-nikitastepnik/src/task_4/: a.out  funcs.hpp  second.cpp
homeworks/cpp-classroom-2324-sem01-cls07-nikitastepnik/: CMakeLists.txt  README.adoc
homeworks/cpp-classroom-2324-sem01-cls07-nikitastepnik/.github/classroom/: autograding.json
homeworks/cpp-classroom-2324-sem01-cls07-nikitastepnik/src/task_1/: json_value.cpp  json_value.hpp  test_json_value.cpp
homeworks/cpp-classroom-2324-sem01-cls07-nikitastepnik/src/task_2/: test_extensive_allocation.cpp  test_leak_detector.cpp
homeworks/cpp-classroom-2324-sem01-cls09-nikitastepnik/: .gitignore  CMakeLists.txt
homeworks/cpp-classroom-2324-sem01-cls09-nikitastepnik/.github/classroom/: autograding.json
homeworks/cpp-classroom-2324-sem01-cls09-nikitastepnik/src/task_1/: queue.hpp  test.cpp
sem_tasks/cpp-classroom-2324-sem01-cls02-nikitastepnik/: CMakeLists.txt  Makefile  README.adoc  array_utils  smoke_task_1_strcmp  strcmp
sem_tasks/cpp-classroom-2324-sem01-cls02-nikitastepnik/src/task_1/: find_nearest_same.hpp  strcmp.cpp  strcmp.hpp  test_find_nearest_same.cpp  test_strcmp.cpp
sem_tasks/cpp-classroom-2324-sem01-cls02-nikitastepnik/src/task_2/: a.out  array_utils.cpp
sem_tasks/cpp-classroom-2324-sem01-cls04-nikitastepnik/: CMakeLists.txt  README.adoc
sem_tasks/cpp-classroom-2324-sem01-cls04-nikitastepnik/src/task_1/: composition.cpp  test.cpp
sem_tasks/cpp-classroom-2324-sem01-cls04-nikitastepnik/src/task_2/: a.out  combine.hpp  test.cpp
sem_tasks/cpp-classroom-2324-sem01-cls04-nikitastepnik/src/task_3/: ladder_combination.hpp  test.cpp
sem_tasks/cpp-classroom-2324-sem01-cls04-nikitastepnik/src/task_4/: test.cpp
sem_tasks/cpp-classroom-2324-sem01-cls04-nikitastepnik/src/task_5/: test.cpp
sem_tasks/cpp-classroom-2324-sem01-cls05-nikitastepnik/: .gitignore  CMakeLists.txt  README.adoc
sem_tasks/cpp-classroom-2324-sem01-cls05-nikitastepnik/.github/classroom/: autograding.json
sem_tasks/cpp-classroom-2324-sem01-cls05-nikitastepnik/src/task_0/: network_old_api.cpp  network_old_api.hpp
sem_tasks/cpp-classroom-2324-sem01-cls05-nikitastepnik/src/task_1/: a.out  test.cpp
sem_tasks/cpp-classroom-2324-sem01-cls05-nikitastepnik/src/task_2/: string_view.cpp  test_access_operator.cpp  test_lazy_string.cpp
sem_tasks/cpp-classroom-2324-sem01-cls06-nikitastepnik/: CMakeLists.txt  custom.css
sem_tasks/cpp-classroom-2324-sem01-cls06-nikitastepnik/.github/classroom/: autograding.json
sem_tasks/cpp-classroom-2324-sem01-cls06-nikitastepnik/src/task_1/: my_ostream.hpp  my_ostream_con.hpp  task_1_2_test.cpp
sem_tasks/cpp-classroom-2324-sem01-cls06-nikitastepnik/src/task_2/: corpus_index.hpp
sem_tasks/cpp-classroom-2324-sem01-cls06-nikitastepnik/src/task_3/: test.cpp  test_alignment.cpp
sem_tasks/cpp-classroom-2324-sem01-cls08-nikitastepnik/: CMakeLists.txt  README.adoc
sem_tasks/cpp-classroom-2324-sem01-cls08-nikitastepnik/src/task_1/: fibonacci.hpp
sem_tasks/cpp-classroom-2324-sem01-cls08-nikitastepnik/src/task_3/: test.cpp
sem_tasks/cpp-classroom-2324-sem01-cls10-nikitastepnik/: CMakeLists.txt
sem_tasks/cpp-classroom-2324-sem01-cls10-nikitastepnik/src/solution/: unique_ptr.hpp
sem_tasks/cpp-classroom-2324-sem01-cls10-nikitastepnik/src/test/: task_2_test.cpp  task_3_test.cpp
sem_tasks/cpp-classroom-2324-sem02-cls01-nikitastepnik/: .gitignore  CMakeLists.txt  README.adoc
sem_tasks/cpp-classroom-2324-sem02-cls01-nikitastepnik/src/: simple_test.h
sem_tasks/cpp-classroom-2324-sem02-cls01-nikitastepnik/src/task_1/: test.cpp  worker.hpp
sem_tasks/cpp-classroom-2324-sem02-cls01-nikitastepnik/src/task_2/: test.cpp  vector.hpp
sem_tasks/cpp-classroom-2324-sem02-cls01-nikitastepnik/src/task_3/: logger.hpp  test.cpp
(+114 files in other folders)
